--- a/index_univ.html
+++ b/index_univ.html
@@ -130,7 +130,7 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여 신청서 - 등록(이전 등록/제출 신청정보가 있는 경우)</td>
-                    <td>참여신청서-등록_이전 등록,제출신청정보가있는경우.html</td>
+                    <td>참여신청서-등록_이전 등록,제출신청정보가있는경우</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
@@ -145,7 +145,7 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여 신청서 - 등록 제출완료</td>
-                    <td>참여신청서-등록_제출완료.html</td>
+                    <td>참여신청서-등록_제출완료</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
@@ -159,12 +159,87 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td></td>
-                    <td>참여신청서 - 회수(수정)</td>
-                    <td>UI_ADHPAbS05__</td>
+                    <td>참여신청서 - 조회_제출</td>
+                    <td>참여신청서-조회_제출</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/07_UI_ADHPAbS05__.html" target="_blank">PC</a>
+                        <a href="./pc/참여신청서-조회_제출.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여신청서 - 조회_불인정</td>
+                    <td>참여신청서-조회_불인정</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/참여신청서-조회_불인정.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여신청서 - 회수_수정</td>
+                    <td>참여신청서-회수_수정</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/참여신청서-회수_수정.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>빌드업</td>
+                    <td></td>
+                    <td>빌드업 - 참여신청서 조회</td>
+                    <td>빌드업-참여신청서조회</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/빌드업-참여신청서조회.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>빌드업</td>
+                    <td></td>
+                    <td>빌드업 - 상담이력_목록없음</td>
+                    <td>빌드업-상담이력_목록없음</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/빌드업-상담이력_목록없음.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>빌드업</td>
+                    <td></td>
+                    <td>빌드업 - 상담이력_목록있음</td>
+                    <td>빌드업-상담이력_목록있음</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/빌드업-상담이력_목록있음.html" target="_blank">PC</a>
                     </td>
                 </tr>
             </tbody>
