--- a/pc/빌드업-상담이력_목록없음.html
+++ b/pc/빌드업-상담이력_목록없음.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>참여신청서 - 목록 없음</title>
+        <title>빌드업 - 상담이력_목록있음</title>
         <script src="../pc/include/js/head.js"></script>
         <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
@@ -45,6 +45,18 @@
                         <div class="cont_wrap_area">
 
 
+
+
+
+
+
+
+
+
+                            
+
+
+
                             <!-- 콘텐츠 타이틀 -->
                             <div class="sub_tl">
                                 <h2 class="h2_sb">대학 재학생 맞춤형 고용서비스</h2>
@@ -56,27 +68,19 @@
                                 <div class="mypage">
                                     <div class="progmg allcare">
 
-                                        <div class="box_notice_wrap mt8">
-                                            <p class="tit">안내</p>
-                                            <ul class="box_list_area">
-                                                <li class="txt_list">목록 내 <span class="fw600">상세조회버튼</span>을 선택하시면 참여신청서를 조회하실 수 있습니다.</li>
-                                                <li class="txt_list"><span class="fw600">진행상태가 인정, 종료인 참여신청서의 상세조회버튼</span>을 선택하시면 참여유형별로 아래 내용을 추가로 확인하실 수 있습니다.
-                                                    <div>
-                                                        - 빌드업 프로젝트 : 상담 이력조회, 경력개발 로드맵 작성 및 조회<br>
-                                                        - 점프업 프로젝트 : 상담 이력 조회, 취업준비도검사ㆍIAPㆍ포인트신청서 작성 및 조회<br>
-                                                        ※ 단, 진행상태가 중단, 종료인 경우 조회만 가능합니다.
-                                                    </div>
-                                                </li>
-                                                <li class="txt_list">포트폴리오의 명칭이 경력개발 로드맵으로 변경되었습니다.</li>
-                                            </ul>
-                                        </div>
+                                        <ul class="tab_title topTab" role="tablist">
+                                            <!-- D: 활성화시 class[active] add -->
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여신청서</span></button></li>
+                                            <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>상담이력</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>경력개발로드맵</span></button></li>
+                                        </ul>
 
-                                        <div class="pa_page_empty mt80">
+                                        <div class="pa_page_empty mt80 pt40">
                                             <figure class="mb24"><img src="./include/images/ico60_warning_navy.svg"></figure>
-                                            <p class="t3_sb">작성하신 대학 재학생 맟춤형 고용서비스<br>참여신청서가 없습니다.</p>
+                                            <p class="t3_sb">상담이 아직 등록되지 않았습니다. <br>대학에서 상담 내용을 등록 후 조회할 수 있습니다.</p>
                                             <div class="box_btn_wrap mt40">
                                                 <a href="" class="btn big type02 btn_s_r">이전</a>
-                                                <a href="" class="btn big type01 fill">신청서 작성</a>
+                                                <a href="" class="btn big type01 fill">확인</a>
                                             </div>                                  
                                         </div>
 
