--- a/pc/참여신청서-목록있음.html
+++ b/pc/참여신청서-목록있음.html
@@ -31,14 +31,14 @@
                 <input type="hidden" name="bkmkSeq" id="bkmkSeq">
 
                 <!-- // location -->
-                <div class="location type_a"></div>
+                <div class="location type_c"></div>
                 <!-- // location -->
 
                 <div id="contents">
                     
                     
                     <!-- #lnb -->
-                    <div class="lnb type_a"></div>
+                    <div class="lnb type_c"></div>
                     <!-- #lnb -->
 
                     <div class="cont_wrap">
