--- a/pc/참여신청서-이전정보팝업.html
+++ b/pc/참여신청서-이전정보팝업.html
@@ -31,13 +31,13 @@
                 <input type="hidden" name="bkmkSeq" id="bkmkSeq">
 
                 <!-- // location -->
-                <div class="location type_b"></div>
+                <div class="location type_c"></div>
                 <!-- // location -->
 
                 <div id="contents">
                     
                     <!-- #lnb -->
-                    <div class="lnb type_b"></div>
+                    <div class="lnb type_c"></div>
                     <!-- #lnb -->
 
                     <div class="cont_wrap">
