--- a/pc/참여신청서-조회_제출.html
+++ b/pc/참여신청서-조회_제출.html
@@ -31,14 +31,14 @@
                 <input type="hidden" name="bkmkSeq" id="bkmkSeq">
 
                 <!-- // location -->
-                <div class="location type_a"></div>
+                <div class="location type_c"></div>
                 <!-- // location -->
 
                 <div id="contents">
                     
                     
                     <!-- #lnb -->
-                    <div class="lnb type_a"></div>
+                    <div class="lnb type_c"></div>
                     <!-- #lnb -->
 
                     <div class="cont_wrap">
@@ -248,39 +248,6 @@
                                                                     <p class="status_label">제출</p>
                                                                     <p class="status_date">2025-00-00</p>
                                                                 </div>
-                                                            </li>
-                                                            <li>
-                                                                <div class="apply_summary_status">
-                                                                    <p class="status_label">불인정</p>
-                                                                    <p class="status_date">2025-00-00</p>
-                                                                </div>
-                                                                <p class="apply_summary_reason">불인정사유 : 대플 담당자가 등록한 불인정 사유 조회</p>
-                                                            </li>
-                                                            <li>
-                                                                <div class="apply_summary_status">
-                                                                    <p class="status_label">제출</p>
-                                                                    <p class="status_date">2025-00-00</p>
-                                                                </div>
-                                                            </li>
-                                                            <li>
-                                                                <div class="apply_summary_status">
-                                                                    <p class="status_label">불인정</p>
-                                                                    <p class="status_date">2025-00-00</p>
-                                                                </div>
-                                                                <p class="apply_summary_reason">불인정사유 : 대플 담당자가 등록한 불인정 사유 조회</p>
-                                                            </li>
-                                                            <li>
-                                                                <div class="apply_summary_status">
-                                                                    <p class="status_label">제출</p>
-                                                                    <p class="status_date">2025-00-00</p>
-                                                                </div>
-                                                            </li>
-                                                            <li>
-                                                                <div class="apply_summary_status">
-                                                                    <p class="status_label">불인정</p>
-                                                                    <p class="status_date">2025-00-00</p>
-                                                                </div>
-                                                                <p class="apply_summary_reason">불인정사유 : 대플 담당자가 등록한 불인정 사유 조회</p>
                                                             </li>
                                                         </ul>
                                                     </div>
