--- a/pc/빌드업-상담이력_목록없음.html
+++ b/pc/빌드업-상담이력_목록없음.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>빌드업 - 상담이력_목록있음</title>
+        <title>빌드업 - 상담이력_목록없음</title>
         <script src="../pc/include/js/head.js"></script>
         <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
