--- a/pc/빌드업-경력개발로드맵_목록없음.html
+++ b/pc/빌드업-경력개발로드맵_목록없음.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>빌드업 - 상담이력_목록없음</title>
+        <title>빌드업 - 경력개발로드맵_목록없음</title>
         <script src="../pc/include/js/head.js"></script>
         <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
@@ -71,13 +71,17 @@
                                         <ul class="tab_title topTab" role="tablist">
                                             <!-- D: 활성화시 class[active] add -->
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여신청서</span></button></li>
-                                            <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>상담이력</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>경력개발로드맵</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>상담이력</span></button></li>
+                                            <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>경력개발 로드맵</span></button></li>
                                         </ul>
 
                                         <div class="notlist_inner mt40">
                                             <figure><div class="icon"></div></figure>
-                                            <p>등록된 상담이력이 없습니다.</p>
+                                            <p>등록된 경력개발로드맵이 없습니다.</p>
+                                        </div>
+
+                                        <div class="roadmap_btn_wrap mt40">
+                                            <button type="button" class="btn medium type01 fill"><span>경력개발로드맵 작성하기</span></button>
                                         </div>
 
                                     </div>
