--- a/index_univ.html
+++ b/index_univ.html
@@ -242,6 +242,21 @@
                         <a href="./pc/빌드업-상담이력_목록있음.html" target="_blank">PC</a>
                     </td>
                 </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>빌드업</td>
+                    <td></td>
+                    <td>빌드업 - 경력개발로드맵_목록없음</td>
+                    <td>빌드업-경력개발로드맵_목록없음</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/빌드업-경력개발로드맵_목록없음.html" target="_blank">PC</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </body>
