--- a/mobile/05_UI_ADHPAbS03.html
+++ b/mobile/05_UI_ADHPAbS03.html
@@ -125,11 +125,19 @@
                                         </div>
                                         <div class="dl_major">
                                             <dt class="req_mark"><label for="major">전공<span class="blind"> 필수입력</span></label></dt>
-                                            <dd>
+                                            <dd class="dd_twincell">
                                                 <div class="box_table_group">
                                                     <div class="cell">
                                                         <span class="box_ipt new_ipt">
                                                             <input type="text" id="major" class="input_txt" title="전공명" readonly placeholder="전공" required>
+                                                            <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <div class="box_table_group">
+                                                    <div class="cell">
+                                                        <span class="box_ipt new_ipt">
+                                                            <input type="text" id="major" class="input_txt" title="학과명" readonly placeholder="학과" required>
                                                             <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                         </span>
                                                     </div>
