--- a/mobile/06_UI_ADHPAbS04.html
+++ b/mobile/06_UI_ADHPAbS04.html
@@ -105,8 +105,8 @@
                                             <dd>4학년</dd>
                                         </div>
                                         <div class="dl_major">
-                                            <dt>전공</dt>
-                                            <dd>국어국문학</dd>
+                                            <dt>전공/학과</dt>
+                                            <dd>전공명/학과명</dd>
                                         </div>
                                         <div class="dl_status">
                                             <dt>상태</dt>
