--- a/pc/06_UI_ADHPAbS04.html
+++ b/pc/06_UI_ADHPAbS04.html
@@ -165,11 +165,13 @@
                                                             <tr class="tr_major">
                                                                 <th scope="row">
                                                                     <label for="major">
-                                                                        <span class="req_mark">전공</span>
+                                                                        <span class="req_mark">전공/학과</span>
                                                                         <span class="sr_only">필수 입력</span>
                                                                     </label>
                                                                 </th>
-                                                                <td>국어국문학과</td>
+                                                                <td colspan="3">전공명/학과명</td>
+                                                            </tr>
+                                                            <tr class="tr_gradate">
                                                                 <th scope="row">
                                                                     <label for="status">
                                                                         <span class="req_mark">상태</span>
@@ -177,8 +179,6 @@
                                                                     </label>
                                                                 </th>
                                                                 <td>졸업</td>
-                                                            </tr>
-                                                            <tr class="tr_gradate">
                                                                 <th scope="row">
                                                                     <label for="gradDate">
                                                                         <span class="req_mark">졸업(예정) 년월</span>
