--- a/pc/09_UI_ADHPAbP07.html
+++ b/pc/09_UI_ADHPAbP07.html
@@ -229,7 +229,7 @@
         <!-- 팝업내용 시작 -->
         <section id="operPrgmPopup" class="new_popup allcare_popup newpop_uni_index" role="dialog" aria-modal="true" aria-labelledby="operPrgmPopupTitle">
             <header class="head type2 newpop_tit">
-                <h1 id="operPrgmPopupTitle" class="h2_sb">전공 찾기</h1>
+                <h1 id="operPrgmPopupTitle" class="h2_sb">전공 및 학과 찾기</h1>
                 <!-- 닫기 -->
                 <button type="button" id="btnClose_operPrgmPopup" class="btn-close closed" aria-label="팝업 닫기">
                     <span class="blind">팝업 닫기</span>
