--- a/pc/05_UI_ADHPAbS03.html
+++ b/pc/05_UI_ADHPAbS03.html
@@ -60,7 +60,10 @@
 
                                         <div class="my_ptcp_from">
                                             <div class="box_group_wrap">
-                                                <h3 class="t2_sb">신청인 정보</h3>
+                                                <div class="prof_tit_twin">
+                                                    <h3 class="t2_sb">신청인 정보</h3>
+                                                    <button class="btn medium type02 btn_prof_edit" type="button"><span>회원정보 수정</span></button>
+                                                </div>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
                                                         <caption>성명, 전화번호, 이메일, 주소 을(를) 제공하는 표</caption>
@@ -150,7 +153,7 @@
                                                 <h3 class="t2_sb">학적정보</h3>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
-                                                        <caption>학번, 학년, 전공, 상태, 졸업(예정)년월 을(를) 제공하는 표</caption>
+                                                        <caption>학번, 학년, 전공, 학과, 상태, 졸업(예정)년월 을(를) 제공하는 표</caption>
                                                         <colgroup>
                                                             <col style="width:20%">
                                                             <col style="width:30%">
@@ -202,11 +205,17 @@
                                                                         <span class="sr_only">필수 입력</span>
                                                                     </label>
                                                                 </th>
-                                                                <td>
+                                                                <td colspan="3">
                                                                     <div class="box_table_group">
-                                                                        <div class="cell">
+                                                                        <div class="cell_twin">
                                                                             <span class="box_ipt new_ipt">
                                                                                 <input type="text" id="bassAdrTxt" class="input_txt" title="전공명" readonly="" placeholder="전공">
+                                                                                <button type="button" class="newbtn_del ico16_delete">
+                                                                                    <span class="blind">삭제</span>
+                                                                                </button>
+                                                                            </span>
+                                                                            <span class="box_ipt new_ipt">
+                                                                                <input type="text" id="bassAdrTxt" class="input_txt" title="학과명" readonly="" placeholder="학과">
                                                                                 <button type="button" class="newbtn_del ico16_delete">
                                                                                     <span class="blind">삭제</span>
                                                                                 </button>
@@ -215,6 +224,8 @@
                                                                         <button type="button" class="btn medium type02 btnSearch" id="btnSearch" name="btnSearch" aria-haspopup="dialog"><span>검색</span></button>
                                                                     </div>
                                                                 </td>
+                                                            </tr>
+                                                            <tr class="tr_gradate">
                                                                 <th scope="row">
                                                                     <label for="status">
                                                                         <span class="req_mark">상태</span>
@@ -231,8 +242,6 @@
                                                                         </select>
                                                                     </div>
                                                                 </td>
-                                                            </tr>
-                                                            <tr class="tr_gradate">
                                                                 <th scope="row">
                                                                     <label for="gradDate">
                                                                         <span class="req_mark">졸업(예정) 년월</span>
