--- a/pc/07_UI_ADHPAbS05.html
+++ b/pc/07_UI_ADHPAbS05.html
@@ -427,22 +427,23 @@
 
                                 <script>
                                     // 신청 및 처리현황 on/off 토글
-                                    document.addEventListener('DOMContentLoaded', function () {
-                                        const toggleBtn = document.querySelector('.apply_summary_action .apply_summary_toggle');
-                                        const detailArea = document.getElementById('applySummaryDetail');
+$(document).ready(function() {
+    var $toggleBtn = $('.apply_summary_action .apply_summary_toggle');
+    var $detailArea = $('#applySummaryDetail');
 
-                                        toggleBtn.addEventListener('click', function () {
-                                            const isExpanded = toggleBtn.getAttribute('aria-expanded') === 'true';
-                                            toggleBtn.setAttribute('aria-expanded', String(!isExpanded));
-                                            toggleBtn.classList.toggle('on', !isExpanded);
-                                            toggleBtn.classList.toggle('off', isExpanded);
-                                            if (!isExpanded) {
-                                                detailArea.removeAttribute('hidden');
-                                            } else {
-                                                detailArea.setAttribute('hidden', '');
-                                            }
-                                        });
-                                    });
+    $toggleBtn.on('click', function() {
+        var isExpanded = $toggleBtn.attr('aria-expanded') === 'true';
+        $toggleBtn.attr('aria-expanded', String(!isExpanded));
+        $toggleBtn.toggleClass('on', !isExpanded);
+        $toggleBtn.toggleClass('off', isExpanded);
+
+        if (!isExpanded) {
+            $detailArea.removeAttr('hidden');
+        } else {
+            $detailArea.attr('hidden', '');
+        }
+    });
+});
 
 
                                     // 참여자 분류에서 1번 선택시 학적정보 보여주기 
